feat: Implement movie and hotel booking models, repositories, and services
- Added MovieBooking, Payment, Room, RoomImage, Screen, Seat, Showtime models with JPA annotations.
- Created corresponding repositories for each model to handle database operations.
- Developed HotelService and MovieService to manage hotel and movie bookings, including availability checks and booking creation.
- Implemented PaymentService for processing payments, including validation and refund functionality.
- Introduced DTOs for data transfer between layers.
- Added necessary relationships and constraints in the models to ensure data integrity.